--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
-spring.mvc.view.prefix=/WEB-INF/jsps/
-spring.mvc.view.suffix=.jsp
 debug=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/fatfcuk
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+
+
+logging.level.org.hibernate.SQL=DEBUG
